[package]
name = "lsr-rs"
version = "0.1.0"
authors = ["Bas Bossink <bas.bossink@gmail.com>"]
edition = "2018"
description = """\
A small utility that can parse the iana language subtag registry file, as
found at: \
https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry."""
license = "BSD-2-Clause"
readme = "Readme.md"
keywords = ["iana", "language", "subtag", "registry" ]
categories = ["command-line-utilities", "parser-implementations" ]
repository = "https://github.com/basbossink/lsr-rs"
homepage = "https://github.com/basbossink/lsr-rs"
documentation = "https://docs.rs/lsr-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
